# chronicle

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.postgres.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  supply-chain.yml
chronicle/: __init__.py  eval_metrics.py  http_client.py  scorer_contract.py  verify.py
chronicle/api/: __init__.py  app.py
chronicle/cli/: __init__.py  command_handlers.py  dispatch.py  main.py  parser.py  project_commands.py
chronicle/core/: __init__.py  encryption.py  errors.py  events.py  http_safety.py  identity.py  logging.py  payloads.py  policy.py  policy_compat.py  ssrf.py  uid.py  validation.py
chronicle/integrations/: __init__.py  haystack.py  langchain.py  llamaindex.py
chronicle/mcp/: __init__.py  server.py  service.py
chronicle/reference/: __init__.py  api.py  http_client.py
chronicle/store/: __init__.py  backend_config.py  claim_embedding_store.py  evidence_store.py  export_import.py  neo4j_export.py  neo4j_sync.py  postgres_event_store.py  project.py  (+9 more)
chronicle_graph_project/: manifest.json
critical_areas/: 01-defensibility-is-not-truth.md  02-source-independence-is-not-verified.md  03-what-the-verifier-checks.md  04-evidence-claim-linking.md  05-policy-and-thresholds.md  06-actor-identity-is-not-verified.md  README.md
docs/: ENCRYPTION.md  GENERIC_EXPORT.md  LESSONS_QUIZZES_STORY_REVIEW.md  ONBOARDING_AND_OPEN_SOURCE.md  POSTGRES.md  PROJECT_REVIEW.md  README.md  adjacent-standards-guidance.md  adversarial-failure-modes.md  ai-to-populate-epistemology.md  api-ingestion-pipeline-example.md  api.md  architecture-core-reference.md  aura-graph-pipeline.md  backend-migration-versioning-policy.md  benchmark.md  branch-protection-rollout-verification.md  c2pa-compatibility-export.md  case-study-lizzie-borden.md  chronicle-as-training-data.md  chronicle-file-format.md  ci-branch-protection.md  claim-evidence-metrics-export.md  claimreview-export.md  code-quality-review.md  conformance.md  consuming-chronicle.md  coverage-core.md  defensibility-metrics-schema.md  epistemology-scope.md  errors.md  eval-and-benchmarking.md  eval_contract.md  eval_contract_schema.json  external-ids.md  external-review-dispatch-log.template.json  external-standards-review-cycle.md  getting-started.md  glossary.md  human-in-the-loop-and-attestation.md  (+57 more)
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
guidebook/: 01-the-problem.md  02-why-this-problem-exists.md  03-how-we-are-solving-it.md  04-where-challenges-remain.md  05-how-you-can-help.md  README.md
lessons/: 00-how-to-use-these-lessons.md  01-codebase-map.md  02-the-scorer.md  03-the-verifier.md  04-events-and-core.md  05-store-and-session.md  06-defensibility-metrics.md  07-integrations-and-scripts.md  08-cli.md  09-epistemic-tools.md  10-export-import-neo4j.md  11-interoperability-api-and-tests.md  12-chronicle-file-format-and-schema.md  13-release-readiness-security-and-standards.md  14-mcp-agent-integration.md  README.md
logo/: svg_black.py  svg_white.py
notebooks/: 01-scorer-contract.ipynb  02-session-workflow.ipynb  README.md
scripts/: Dockerfile.standalone_scorer  README.md  README_standalone_scorer.md  add_lizzie_tensions.py  api_ingestion_pipeline_example.py  check_branch_protection_rollout.py  check_deterministic_defensibility.py  check_doc_links.py  check_docs_currency.py  check_frontend_api_routes.py  check_integration_export_contracts.py  check_neo4j_ci_rollout.py  check_neo4j_contract.py  check_post_public_finalization.py  claim_evidence_graph_export.py  compliance_report_from_rag.py  container_security_gate.py  cross_framework_rag_chronicle.py  dev_web_stack.py  eval_harness_adapter.py  export_for_ml.py  generate_agent_tools.py  generate_frontend_api_routes.py  generate_sample_chronicle.py  haystack_rag_chronicle.py  ingest_chronicle_to_aura.py  ingest_transcript_csv.py  langchain_rag_chronicle.py  llamaindex_rag_chronicle.py  multi_run_investigation.py  normalize_quotes_in_docs.py  portfolio_risk_summary.py  postgres_backend_parity.py  postgres_doctor.py  postgres_onboarding_timed_check.py  postgres_smoke.py  rag_path_demo.py  review_readiness_gate.py  run_conformance.py  run_reference_workflows.py  (+6 more)
story/: 01-the-problem.md  02-why-this-problem-exists.md  03-how-we-are-solving-it.md  04-where-challenges-remain.md  05-how-you-can-help.md  06-epistemology-scope-tables.md  README.md
tests/: __init__.py  conftest.py  test_adapter_examples.py  test_adapter_starter_and_validator.py  test_api_contract.py  test_api_ingestion_pipeline_example.py  test_attestation.py  test_backend_config.py  test_branch_protection_rollout.py  test_c2pa_adapter.py  test_cli_actor.py  test_deterministic_defensibility.py  test_docs_contract.py  test_docs_currency.py  test_generic_export_contracts.py  test_http_client.py  test_http_safety.py  test_identity.py  test_integration_export_contracts.py  test_integrations_smoke.py  test_mcp_service.py  test_neo4j_ci_rollout.py  test_neo4j_contract.py  test_neo4j_live_integration.py  test_neo4j_projection_benchmark.py  test_neo4j_projection_parity.py  test_neo4j_sync_failures.py  test_phase3_session_scorer_identity.py  test_phase4_session_audit_trail.py  test_phase5_coverage.py  test_portfolio_risk_summary.py  test_post_public_finalization.py  test_postgres_backend_routing.py  test_postgres_convergence_scripts.py  test_postgres_projection.py  test_projection_read_model_commands.py  test_ragas_adapter.py  test_read_model_snapshot.py  test_reference_workflows.py  test_review_readiness_gate.py  (+16 more)
thought_experiments/: 00-panel-method.md  01-epistemologists-conference-review.md  02-investigative-journalists-panel-review.md  03-legal-practitioners-panel-review.md  04-historians-archivists-panel-review.md  05-compliance-audit-panel-review.md  06-rag-evaluation-engineers-panel-review.md  07-pre-publication-launch-readiness-panel-review.md  README.md  decision-register.md
tools/: __init__.py
(+152 files in other folders)
